# yast-irst

./: .gitignore  MAINTAINER  README.md  RPMNAME  TODO
src/: Makefile.am
src/clients/: irst.rb
src/desktop/: irst.desktop
src/include/irst/: complex.rb  dialogs.rb  helps.rb  uifunctions.rb  wizards.rb
src/modules/: Irst.rb
