# Sources for irst

module_DATA = \
  modules/Irst.rb

client_DATA = \
  clients/irst.rb

yncludedir = @yncludedir@/irst
ynclude_DATA = \
  include/irst/wizards.rb \
  include/irst/dialogs.rb \
  include/irst/uifunctions.rb \
  include/irst/complex.rb \
  include/irst/helps.rb

desktop_DATA = \
  desktop/irst.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
